--- a/EduHome/Areas/Admin/Views/Services/Index.cshtml
+++ b/EduHome/Areas/Admin/Views/Services/Index.cshtml
@@ -8,7 +8,7 @@
 <div class="card">
     <div class="card-header" style="display:flex;justify-content:space-between">
         <div>
-            <h2>Services</h2> 
+            <h2>Services</h2>
         </div>
         <div>
             <a asp-action="Create" class="btn btn-primary text-white rounded-pill" style="margin-right:13px">Create</a>
@@ -20,28 +20,44 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        @*<th>Status</th>*@
+                        <th>Status</th>
                         <th style="text-align:right">Actions</th>
                     </tr>
                 </thead>
                 <tbody>
-                   @foreach(Service item in Model)
-                   {
+                    @foreach (Service item in Model)
+                    {
                         <tr>
                             <td>
                                 <i class="fab fa-angular fa-lg text-danger me-3"></i> <strong>@item.Name</strong>
                             </td>
 
-                            @*<td><span class="badge bg-label-primary me-1">Active</span></td>*@
+                            <td>
+                                @if (item.IsDeactive)
+                                {
+
+                                    <span style="padding:6px 8px; background-color:red ;color:white;border-radius:7px">Deactive</span>
+                                }
+                                else
+                                {
+                                    <span style="padding:6px 8px; background-color:green ;color:white;border-radius:7px">Active</span>
+                                }
+                            </td>
+
                             <td>
                                 <div style="display:flex;justify-content:flex-end">
                                     <a class="btn btn-warning text-white rounded-pill" style="margin-right:13px" asp-action="Detail" asp-route-id="@item.Id">Detail</a>
-                                    <a class="btn btn-info text-white rounded-pill" style="margin-right:13px" asp-action="Update" asp-route-id="@item.Id" >Update</a>
-                                    <a class="btn btn-danger text-white rounded-pill" style="margin-right:13px" asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                                    <a class="btn btn-info text-white rounded-pill" style="margin-right:13px" asp-action="Update" asp-route-id="@item.Id">Update</a>
+                                    @if(item.IsDeactive){
+                                        <a class="btn btn-success text-white rounded-pill" style="margin-right:13px;width:118px" asp-action="Activity" asp-route-id="@item.Id">Active</a>
+                                    }
+                                    else{
+                                        <a class="btn btn-danger text-white rounded-pill" style="margin-right:13px;width:118px" asp-action="Activity" asp-route-id="@item.Id">DeActive</a>
+                                    }
                                 </div>
                             </td>
                         </tr>
-                   }
+                    }
                 </tbody>
             </table>
         </div>
