--- a/EduHome/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/EduHome/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -134,7 +134,7 @@
                     </li>
                     <li class="menu-item active">
                         <a asp-controller="Services" asp-action="Index" class="menu-link">
-                            <i class="menu-icon tf-icons bx bx-home-circle"></i>
+                            <i class="menu-icon tf-icons bx bx-table"></i>
                             <div data-i18n="Analytics">Services</div>
                         </a>
                     </li>
