--- a/EduHome/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/EduHome/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -138,6 +138,12 @@
                             <div data-i18n="Analytics">Services</div>
                         </a>
                     </li>
+                     <li class="menu-item active">
+                        <a asp-controller="Sliders" asp-action="Index" class="menu-link">
+                            <i class="menu-icon tf-icons bx bx-table"></i>
+                            <div data-i18n="Analytics">Sliders</div>
+                        </a>
+                    </li>
                    
                 </ul>
             </aside>
