Login, Logout ,SignUp,Remember me maked

--- a/EduHome/Views/Account/Register.cshtml
+++ b/EduHome/Views/Account/Register.cshtml
@@ -25,6 +25,7 @@
                     <div class="login-form-container">
                         <div class="login-text">
                             <h2>sign up</h2>
+                            <div asp-validation-summary="ModelOnly" style="color:red; margin-left:10px"></div>
                         </div>
                         <div class="login-form">
                             <form method="post">
