--- a/EduHome/Areas/Admin/Views/Shared/_AdminLayout.cshtml
+++ b/EduHome/Areas/Admin/Views/Shared/_AdminLayout.cshtml
@@ -144,6 +144,12 @@
                             <div data-i18n="Analytics">Sliders</div>
                         </a>
                     </li>
+                    <li class="menu-item active">
+                        <a asp-controller="Users" asp-action="Index" class="menu-link">
+                            <i class="menu-icon tf-icons bx bx-user"></i>
+                            <div data-i18n="Analytics">Users</div>
+                        </a>
+                    </li>
                    
                 </ul>
             </aside>
